--- a/src/Shop.css
+++ b/src/Shop.css
@@ -5,5 +5,13 @@
 .cards {
     display: grid;
     align-items: end;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(5, 128px);
+    justify-content: center;
+    gap: 64px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
