--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,18 @@
 .page h1 {
     font-size: 3rem;
     margin-top: 32px;
+    margin-bottom: 32px;
+}
+
+a:link, a:visited, a:active {
+    color: black;
+    text-decoration: none;
+    overflow: hidden;
+    max-height: 2.2rem;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 /* Chrome, Safari, Edge, Opera */
