--- a/src/Nav.css
+++ b/src/Nav.css
@@ -15,4 +15,5 @@ nav {
     justify-content: space-between;
     background-color: rgb(65, 168, 175);
     padding: 16px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.445);
 }
