--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    color: rgb(51, 51, 51);
 }
 
 .quantity {
@@ -35,25 +36,30 @@
     background-color: rgb(216, 216, 216);
 }
 
+.image-link {
+    width: 100%;
+    height: 100%;
+}
+
+.image-link img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
+}
+
 .page {
     text-align: center;
 }
 
+.loading {
+    font-size: 1rem;
+    margin-top: 64px;
+}
+
 .page h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-top: 32px;
     margin-bottom: 32px;
-}
-
-a:link, a:visited, a:active {
-    color: black;
-    text-decoration: none;
-    overflow: hidden;
-    max-height: 2.2rem;
-}
-
-a:hover {
-    text-decoration: underline;
 }
 
 /* Chrome, Safari, Edge, Opera */
