--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,5 +1,5 @@
 nav button {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     background-color: rgba(0, 0, 0, 0);
     border: 0;
     cursor: pointer;
@@ -14,6 +14,6 @@ nav {
     display: flex;
     justify-content: space-between;
     background-color: rgb(65, 168, 175);
-    padding: 16px;
+    padding: 16px 64px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.445);
 }
