--- a/src/Cart.css
+++ b/src/Cart.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 8px;
+    padding-bottom: 72px;
 }
 
 .cart-bulk {
@@ -46,4 +47,10 @@
     border: 0;
     cursor: pointer;
     text-decoration: underline;
+}
+
+.check-out {
+    position: absolute;
+    top: 120px;
+    right: 32px;
 }
