--- a/src/Nav.css
+++ b/src/Nav.css
@@ -15,5 +15,28 @@ nav {
     justify-content: space-between;
     background-color: rgb(65, 168, 175);
     padding: 16px 64px;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.445);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.432);
+}
+
+header {
+    padding: 8px;
+    font-size: 1.4rem;
+    background-color: rgb(65, 168, 175);
+    text-align: center;
+    cursor: pointer;
+}
+
+header a {
+    color: white;
+    text-decoration: none;
+}
+
+footer {
+    padding: 16px;
+    background-color: rgb(65, 168, 175);
+    text-align: center;
+    color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
